--- a/shop/templates/shop/store.html
+++ b/shop/templates/shop/store.html
@@ -4,15 +4,13 @@
 	<div class="row">
 		{% for product in products %}
 		<div class="col-lg-4">
-		{% load static %}
-			<img class="thumbnail" src="{{product.imageURL}}">
 			<div class="box-element product">
+			<img class="thumbnail" src="{{product.imageURL}}">
 				<h6><strong>{{product.name}}</strong></h6>
 				<hr>
-
 				<button data-product="{{product.id}}" data-action="add" class="btn btn-outline-secondary add-btn update-cart">Add to Cart</button>
 				
-				<a class="btn btn-outline-success" href="#">View</a>
+				<a class="btn btn-outline-success" href="{% url 'shop_detail' product.id %}">View</a>
 				<h4 style="display: inline-block; float: right"><strong>${{product.price}}</strong></h4>
 
 			</div>
