--- a/shop/templates/shop/main.html
+++ b/shop/templates/shop/main.html
@@ -1,3 +1,4 @@
+{% load socialaccount %}
 <!DOCTYPE html>
 {% load static %}
 <html>
@@ -5,11 +6,12 @@
 	<title>Ecom</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
+	
+	{% comment %} <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> {% endcomment %}
 
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+	<link rel="stylesheet" href="{% static 'css/mdb.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
-
+	{% if user.is_authenticated %}
 	<script type="text/javascript">
 		var user = '{{request.user}}'
 
@@ -57,14 +59,23 @@
 			document.cookie ='cart=' + JSON.stringify(cart) + ";domain=;path=/"
 		}
 		console.log('Cart:', cart)
-	
 	</script>
-
+	{% endif %}
 </head>
 <body>
 
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand" href="{% url 'shop' %}">Ecom</a>
+	<nav class="navbar navbar-expand-lg navbar-light bg-dark">
+	
+	<div class="container-fluid">
+	<a href="#" class="navbar-brand">
+		<img
+		 src="{% static 'images/NynBrand.png' %}"
+		 height=50px
+		 alt=""
+		 loading="lazy"
+		/>
+	</a>
+	  <a class="navbar-brand" href="{% url 'shop' %}">Nynlabs</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -76,9 +87,12 @@
 	      </li>
 	 
 	    </ul>
-	    <div class="form-inline my-2 my-lg-0">
-	     	<a href="#"class="btn btn-warning">Login</a>
-	     	
+	    <div class="form-inline my-2 mx-3 my-lg-0">
+		{% if not user.is_authenticated %}
+			 <a href="{% provider_login_url 'github' %}" class="btn btn-warning">Login</a>
+		{% else %}
+			<a href="{% url 'accounts/logout' %}" class="btn btn-warning">Logout</a>
+	    {% endif %}
 	     	<a href="{% url 'cart' %}">
 	    		<img  id="cart-icon" src="{% static 'images/cart.png' %}">
 	    	</a>
@@ -86,6 +100,8 @@
 
 	    </div>
 	  </div>
+	</div>
+	
 	</nav>
 
      <div class="container">
@@ -98,11 +114,11 @@
 
 
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="nonymous"></script>
 
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
+	{% comment %} <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script> {% endcomment %}
+	
+	<script type="text/javascript" src="{% static 'js/mdb.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/cart.js' %}"></script>
 </body>
 </html>
