--- a/shop/templates/shop/main.html
+++ b/shop/templates/shop/main.html
@@ -11,7 +11,6 @@
 
 	<link rel="stylesheet" href="{% static 'css/mdb.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
-	{% if user.is_authenticated %}
 	<script type="text/javascript">
 		var user = '{{request.user}}'
 
@@ -60,13 +59,13 @@
 		}
 		console.log('Cart:', cart)
 	</script>
-	{% endif %}
+
 </head>
 <body>
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-dark">
 	
-	<div class="container-fluid">
+		<div class="container-fluid">
 	<a href="#" class="navbar-brand">
 		<img
 		 src="{% static 'images/NynBrand.png' %}"
@@ -87,11 +86,10 @@
 	      </li>
 	 
 	    </ul>
-	    <div class="form-inline my-2 mx-3 my-lg-0">
+	    <div class="form-inline my-2 my-lg-0">
 		{% if not user.is_authenticated %}
 			 <a href="{% provider_login_url 'github' %}" class="btn btn-warning">Login</a>
-		{% else %}
-			<a href="{% url 'accounts/logout' %}" class="btn btn-warning">Logout</a>
+		
 	    {% endif %}
 	     	<a href="{% url 'cart' %}">
 	    		<img  id="cart-icon" src="{% static 'images/cart.png' %}">
@@ -99,8 +97,8 @@
 	    	<p id="cart-total">{{cartItems}}</p>
 
 	    </div>
+	    </div>
 	  </div>
-	</div>
 	
 	</nav>
 
@@ -116,7 +114,7 @@
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="nonymous"></script>
 
-	{% comment %} <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script> {% endcomment %}
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 	
 	<script type="text/javascript" src="{% static 'js/mdb.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/cart.js' %}"></script>
