--- a/templates/todo_ninja/task_index.html
+++ b/templates/todo_ninja/task_index.html
@@ -22,6 +22,7 @@ main {
   height: auto;
   background-color: #ebecf0;
 }
+
 .sortable-item {
   cursor: grab;
   transition: background-color 0.2 ease-in !important;
@@ -30,6 +31,8 @@ sortable-item:hover {
   background-color: rgba(0,0,0,0.01);
 }
 </style>
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/dragula.min.css' %}">
 {% endblock css %}
 
 {% block header %}
@@ -145,9 +148,48 @@ sortable-item:hover {
           </button>
         </div>
     </section>
+
+    <section
+        class="d-flex align-items start"
+        data-perfect-scrollbar="true"
+        style="position: relative;"
+        data-sortable="sortable"
+        >
+      <div class="card shadow-1-strong m-3 p-2 pb-0">
+        <div 
+          class="card-header d-flex justify-content-between pl-1 pr-0 pb-3 border-0"
+        >
+          <p class="mb-0"><strong>Header</strong></p>
+          <button class="btn btn-link text-reset m-0 py-0 px-2">
+            <i class="fas fa-ellipsis-h"></i>
+          </button>
+        </div>
+        <div data-sortable="sortable">
+          <div
+            class="sortable-item card-body rounded bg-white shadow-2 mb-2"
+          >
+          Item 1
+        </div>
+        <div data-sortable="sortable">
+          <div
+            class="sortable-item card-body rounded bg-white shadow-2 mb-2"
+          >
+          Item 2
+        </div>
+        
+        <div class="card-footer">
+          <button
+            class="btn btn-link btn-block text-reset"
+            data-ripple-color="dark"
+            type="button"
+          >
+          <i class="fas fa-plus"></i> Add another card
+          </button>
+        </div>
+    </section>
   </div>
 </main>
 {% endblock content %}
 {% block js %}
-
+<script src="{% static 'js/dragula.js' %}"></script>
 {% endblock %}
