--- a/templates/portfolio/pf_index.html
+++ b/templates/portfolio/pf_index.html
@@ -16,6 +16,9 @@
 
 {% block content %}
   <main>
+  <div class="container">
+    <div class="row d-flex m-auto">
+    
       <div class="row" id="skills">
 
   <div class="col-md-4 mb-4 d-flex align-items-stretch skill px-5">
